# ipalab-config

./: .gitignore  .pre-commit-config.yaml  .yamllint.yml  COPYING  ISSUES.md  README.md  ipalab_config.py  pyproject.toml  requirements.yml
.github/workflows/: ansible-freeipa.yml  behave.yml  lint.yml  release.yml
examples/: custom-containerfile-with-dns.yml  custom-containerfile.yml  custom-ip-address.yml  custom_network.yml  external_addc.yml  external_dns.yml  external_keycloak.yml  external_network.yml  full-hidden-replica.yml  mem-restricted.yml  minimal.yml  mixed-distro.yml  multi-deployment.yml  per-deployment-network.yml  simple-cluster.yml  volumes.yml  wireguard.yml  with-vars.yml
examples/containerfiles/: custom_distro
examples/unbound/: 53.168.192.in-addr.arpa.zone  ipa.test.zone
features/: custom_container.feature  distros.feature  evaluate_test_results.feature  external_host.feature  external_network.feature  hosts.feature  minimal.feature  network_configuration.feature  no_server_deployment.feature  per_deployment_network.feature  publish_ports.feature
features/steps/: custom_container.py  file_data.py  filesystem.py  minimal.py  run_ipalab_config.py
ipalab_config/: __init__.py  __main__.py  addc.py  compose.py  inventory.py  logger.py  unbound.py  utils.py
ipalab_config/data/containerfiles/: alma  c10s  c8s  c9s  centos  external-nodes  fedora  fedora-latest  fedora-rawhide  rocky  ubuntu
ipalab_config/data/keycloak/: Containerfile  keycloak_add_oidc_client.sh  keycloak_add_user.sh  keycloak_functions.sh  trust_keycloak.sh
ipalab_config/data/playbooks/: install-cluster.yml
ipalab_config/data/samba-addc/: deploy_addc.yml
ipalab_config/data/scripts/: chrome_config.sh  open-browser.sh  open-firefox.sh
ipalab_config/data/unbound/: Containerfile  unbound.conf
ipalab_config/external_role/: addc.py  dns.py  keycloak.py  wireguard.py
