[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ipalab-config"
dynamic = ["version"]
authors = [
    {name = "Rafael Guterres Jeffman", email = "rjeffman@redhat.com"},
]
description = "Generates compose and inventory files to create a container based FreeIPA cluster."
readme = "README.md"
requires-python = ">=3.6"
keywords = ["freeipa", "ansible"]
license = {text = "0BSD"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Zero-Clause BSD (0BSD)",
    "Framework :: Ansible",
]

dependencies = ["ruamel.yaml"]

[project.scripts]
ipalab-config = "ipalab_config.__main__:main"

[project.optional-dependencies]
dev = [
    "black",
    "pre-commit",
    "pylint",
    "yamllint",
    "behave>=1.2.7dev6"
]

release = [
    "build"
]

[tool.setuptools]
packages = ["ipalab_config"]

[tool.setuptools.package-data]
ipalab_config = [
    "data/containerfiles/*",
    "data/playbooks/*.yml",
    "data/containerfiles/system-service/*",
    "data/unbound/*",
    "data/samba-addc/*",
]

[tool.setuptools.dynamic]
version = {attr = "ipalab_config.__version__"}

[tool.black]
line-length = 80
target-version = ['py312']
include = '\.pyi?$'

[tool.pylint]
max-line-length = 80
disable = [
    "too-many-locals",
]

[tool.pylint.similarities]
ignore-comments = true
ignore-docstrings = true
ignore-imports = true
ignore-signatures = true
min-similarity-lines = 4

[tool.behave]
show_multiline = false
show_timings = false

[tool.coverage.run]
omit = [
    "features/steps/*"
]

[tool.coverage.report]
skip_empty = true
skip_covered = true
show_missing = true
